# vbrand

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  eof_tools.cc  eof_tools.h  main.cc  the_brand.h
tests/: run
